[package]
name = "mudderjs"
version = "0.1.5"
edition = "2021"
description = "Generate lexicographically-spaced strings between two strings from pre-defined alphabets."
license = "MIT"
repository = "https://github.com/kevinhu/mudder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mudderjs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.88"
mudder = { path = "../mudder" }

[dev-dependencies]
wasm-bindgen-test = "0.3.38"
